Tidying up code

--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -1604,7 +1604,7 @@ DQoNCg
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nls-6Q-nxl"/>
+        <segue reference="Q5M-hF-bhw"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="flame.fill" width="19" height="27"/>
