--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -476,7 +476,8 @@
                     <navigationItem key="navigationItem" title="Workouts" id="gOK-0r-wdZ"/>
                     <connections>
                         <outlet property="heatmapButton" destination="GxP-i5-0nQ" id="oyz-9i-SUd"/>
-                        <outlet property="heatmapInfoButton" destination="tZd-9k-xak" id="CB5-Fu-bQN"/>
+                        <outlet property="heatmapInfoButton" destination="Nea-AY-awa" id="2Iq-Yi-MRa"/>
+                        <outlet property="heatmapTesterButton" destination="tZd-9k-xak" id="V3A-BN-1zv"/>
                         <outlet property="workoutCollectionView" destination="xdx-oz-NWw" id="FZm-9e-HtP"/>
                         <segue destination="Pbk-vr-61V" kind="show" identifier="historyToHeatmap" id="Q5M-hF-bhw"/>
                         <segue destination="HIL-yj-uvc" kind="show" identifier="historyToJDHeatmap" id="lpb-Mm-P31"/>
@@ -1627,7 +1628,7 @@ DQoNCg
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lQG-2T-c3p">
-                                <rect key="frame" x="0.0" y="88" width="414" height="564"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="554"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="fJF-dn-msC"/>
@@ -1813,7 +1814,7 @@ DQoNCg
                         <constraints>
                             <constraint firstItem="lQG-2T-c3p" firstAttribute="leading" secondItem="dWO-9w-WBa" secondAttribute="leading" id="0yf-Ar-ruo"/>
                             <constraint firstItem="lQG-2T-c3p" firstAttribute="trailing" secondItem="dWO-9w-WBa" secondAttribute="trailing" id="49H-nD-evY"/>
-                            <constraint firstItem="Qfd-ml-kHE" firstAttribute="top" secondItem="lQG-2T-c3p" secondAttribute="bottom" id="7ff-zI-rdm"/>
+                            <constraint firstItem="Qfd-ml-kHE" firstAttribute="top" secondItem="lQG-2T-c3p" secondAttribute="bottom" constant="10" id="7ff-zI-rdm"/>
                             <constraint firstItem="lQG-2T-c3p" firstAttribute="top" secondItem="dWO-9w-WBa" secondAttribute="top" id="ZdR-z9-CSs"/>
                             <constraint firstItem="dWO-9w-WBa" firstAttribute="trailing" secondItem="Qfd-ml-kHE" secondAttribute="trailing" id="cqv-rZ-BLN"/>
                             <constraint firstItem="Qfd-ml-kHE" firstAttribute="leading" secondItem="dWO-9w-WBa" secondAttribute="leading" id="tkE-Qf-QLj"/>
